--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
     <ul class="nav navbar-nav">
       <li><a routerLink="converter" routerLinkActive="active">Currency Converter</a></li>
       <li><a routerLink="flightPlan" routerLinkActive="active">Fly Around the World</a></li>
+      <li><a routerLink="spaceship" routerLinkActive="active">Launch the Spaceship</a></li>
     </ul>
   </div>
 </nav>
