--- a/src/app/currency/currency.component.html
+++ b/src/app/currency/currency.component.html
@@ -1,28 +1,30 @@
 <div class="row">
-<div class="text-center">
-  <h2>Welcome to Currency Converter Online</h2>
-  <div class="form-group">
-    <label for="from" class="label">convert from:</label>
-    <select appSelectbox id="from" class="form-control" [(ngModel)]="from.id">
-      <option *ngFor="let currency of converter.currencies;index as index" [value]="currency.id" [label]="currency.name+currency.symbol">
-      </option>
-    </select>
+  <div class="text-center">
+    <h2>Welcome to Currency Converter Online</h2>
+    <form (ngSubmit)="convert(form)" #form="ngForm" class="form-group">
+      <div class="form-group">
+        <label for="from" class="gold-label">convert from:</label>
+        <select appSelectbox id="from" class="form-control" ngModel name="from">
+          <option *ngFor="let currency of converter.currencies;index as index" [value]="currency.id" [label]="currency.name+currency.symbol">
+        </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="to" class="gold-label">to:</label>
+        <select appSelectbox id="to" class="form-control" name="to" ngModel>
+          <option *ngFor="let currency of converter.currencies" [value]="currency.id" [label]="currency.name+currency.symbol">
+          </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <input appSelectbox type="text" class="form-control" ngModel name="sum" placeholder="enter sum">
+      </div>
+      <div class="form-group">
+        <button appSelectbox class="btn btn-default">Convert</button>
+      </div>
+      <div class="form-group">
+        <p class="well text-center" *ngIf="result!==''">{{sum}} {{from.name}} are {{result}} {{to.name}}</p>
+      </div>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="to" class="label">to:</label>
-    <select appSelectbox id="to" class="form-control" [(ngModel)]="to.id">
-      <option *ngFor="let currency of converter.currencies" [value]="currency.id" [label]="currency.name+currency.symbol">
-      </option>
-    </select>
-  </div>
-  <div class="form-group">
-    <input appSelectbox type="text" class="form-control" id="sum" [(ngModel)]="sum" placeholder="enter sum">
-  </div>
-  <div class="form-group">
-  <button appSelectbox class="btn btn-default" (click)="convert()">Convert</button>
-</div>
-<div class="form-group">
-  <p class="well text-center" *ngIf="result!==''">{{sum}} {{from.name}} are {{result}} {{to.name}}</p>
-</div>
-</div>
 </div>
