--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,24 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="body">
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active"></a>
       <div class="text-center">
-          <h2>Angular Project</h2>
-          <h5>you are most welcome</h5>
-        </div>
-    <div class="navbar-header">
-      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Angular-Project</a>
+        <h2>Angular Project</h2>
+        <h5>you are most welcome</h5>
+      </div>
+      </a>
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="/" routerLinkActive="active">Angular-Project</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a routerLink="converter" routerLinkActive="active">Currency Converter</a></li>
+        <!-- <li><a routerLink="flightPlan" routerLinkActive="active">Fly Around the World</a></li> -->
+        <!-- <li><a routerLink="spaceship" routerLinkActive="active">Launch the Spaceship</a></li> -->
+      </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a routerLink="converter" routerLinkActive="active">Currency Converter</a></li>
-      <li><a routerLink="flightPlan" routerLinkActive="active">Fly Around the World</a></li>
-      <li><a routerLink="spaceship" routerLinkActive="active">Launch the Spaceship</a></li>
-    </ul>
-  </div>
-</nav>
-<div class="content">
+  </nav>
+  <div class="content">
     <router-outlet></router-outlet>
-</div>
+  </div>
 </div>
