--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="body">
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/" routerLinkActive="active"></a>
+      <a  routerLink="/" routerLinkActive="active">
       <div class="text-center">
         <h2>Angular Project</h2>
         <h5>you are most welcome</h5>
